[package]
name = "safely"
version = "0.1.0"
authors = ["BooleanCat <tomgodkin@pm.me>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3" }
termcolor = "1.1"
toml = "0.5"
serde = "1.0"
snafu = "0.6"
libsafely = { path = "../libsafely" }

[dev-dependencies]
tempfile = "3"
serial_test = "0.5"